# ComputerVisionTask1

./: .gitignore  CMakeLists.txt  app.rc  resources.qrc
build2/: ComputerVisionTask1
build2/.qt/: QtDeploySupport.cmake
build2/ComputerVisionTask1_autogen/: deps  mocs_compilation.cpp
build2/ComputerVisionTask1_autogen/JCP2AIONHY/: moc_MainWindow.cpp.d  moc_ZoomableImageDialog.cpp.d
include/: EdgeDetection.h  Filters.h  FrequencyDomain.h  Histogram.h  Hybrid.h  ImageProcessor.h  MainWindow.h  Noise.h  Threshold.h  Utils.h
include/metrics/: MetricsCalculator.h
include/models/: ImageModel.h
include/processors/: ColorProcessor.h  EdgeDetectorProcessor.h  FFTProcessor.h  FilterProcessor.h  HistogramProcessor.h  HybridProcessor.h  NoiseProcessor.h
include/ui/: MainWindow.h  ZoomableImageDialog.h
include/utils/: ImageUtils.h
src/: EdgeDetection.cpp  Filters.cpp  FrequencyDomain.cpp  Histogram.cpp  Hybrid.cpp  ImageProcessor.cpp  MainWindow.cpp  MainWindow_Edge.cpp  MainWindow_Filters.cpp  MainWindow_Frequency.cpp  MainWindow_Histogram.cpp  MainWindow_Hybrid.cpp  MainWindow_Noise.cpp  MainWindow_NoiseFilter.cpp  MainWindow_Threshold.cpp  Noise.cpp  Threshold.cpp  Utils.cpp  main.cpp
src/metrics/: MetricsCalculator.cpp
src/models/: ImageModel.cpp
src/processors/: ColorProcessor.cpp  EdgeDetectorProcessor.cpp  FFTProcessor.cpp  FilterProcessor.cpp  HistogramProcessor.cpp  HybridProcessor.cpp  NoiseProcessor.cpp
src/ui/: MainWindow.cpp  MainWindow_Edge.cpp  MainWindow_FFT.cpp  MainWindow_Histogram.cpp  MainWindow_Hybrid.cpp  MainWindow_NoiseFilter.cpp
src/utils/: ImageUtils.cpp
